// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`describeOverview() > a file:  each thing it declares, a type's members grouped 1`] = `
"Card.spell
  type Card  is a Thing
    definition of a Card with nice english aliases for working with it
    Properties  rank, suit, color, value, direction, name, short-suit, short-rank, short-direction,
                short-name, state, pile
    Actions     is face up, is face down, is a face card, is a (suit), is a (rank),
                is the (rank) of (suits), turn (a card) face up, turn (a card) face down,
                turn (a card) over, draw (a card), move (a card) to (a pile), play (a card)
    Constants   Ranks (ace, jack, queen, king), Suits (clubs, diamonds, hearts, spades), black, red,
                Directions (up, down)
  function test card setup"
`;

exports[`describeThing() > a property, with its compiled javascript 1`] = `
"property color of Card
Card.spell:12

color as derivation of suit

Spell
  the color of a card is red if its suit is either diamonds or hearts otherwise it is black

Compiled
  Object.defineProperty(Card.prototype, "color", {
    get() {
      if (spellCore.includes(["diamonds", "hearts"], this.suit)) return "red"
      return "black"
    },
    configurable: true
  })"
`;

exports[`describeThing() > a type 1`] = `
"type Card is a Thing
Card.spell:2

definition of a Card with nice english aliases for working with it

Properties  rank, suit, color, value, direction, name, short-suit, short-rank, short-direction,
            short-name, state, pile
Actions     is face up, is face down, is a face card, is a (suit), is a (rank),
            is the (rank) of (suits), turn (a card) face up, turn (a card) face down,
            turn (a card) over, draw (a card), move (a card) to (a pile), play (a card)
Constants   Ranks (ace, jack, queen, king), Suits (clubs, diamonds, hearts, spades), black, red,
            Directions (up, down)

Spell
  a card is a thing"
`;
